--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="author" content="Khoa Nguyen">
-  <meta name="keywords" content="">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Challenge #1</title>
-  <style>
-    /* CSS */
-  </style>
-  <script>
-    // JAVASCRIPT
-  </script>
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="author" content="Khoa Nguyen">
+ <meta name="keywords" content="">
+ <meta name="description" content="">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>Irina Serova</title>
+ <style>
+   /* CSS */
+ </style>
+ <script>
+   // JAVASCRIPT
+ </script>
 </head>
 <body>
+ <h1>Irina Serova</h1>
+ <p>
+   <img src="img/cat.jpg" alt="cat">
+ </p>
+ <p>I was born and raised in Saint-Petersburg, Russia. I received the Master of Science in Economics at the St. Petersburg State Technical University..I have two children and also loving parents.</p>
+ <h2>Strengths</h2>
+ <ul>
+   <li>Leadership</li>
+   <li>Enthusiasm</li>
+   <li>Creativity</li>
+ </ul>
+ <h2>Experience</h2>
+ <ol>
+   <li>Java</li>
+   <li>Python</li>
+   <li>Javascript</li>
+ </ol>
+ <p>I swim every day</p>
+ <div>My portfolio: http://iserova.com/</div>
 
-  <!-- ELEMENT TAG -->
-  
-  <!--// ENDS: ELEMENT TAG -->
+ <!-- ELEMENT TAG -->
+
+ <!--// ENDS: ELEMENT TAG -->
 
 </body>
 </html>
