--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -19,19 +19,25 @@
  <p>
    <img src="img/cat.jpg" alt="cat">
  </p>
+  <!-- ABOUT ME -->
  <p>I was born and raised in Saint-Petersburg, Russia. I received the Master of Science in Economics at the St. Petersburg State Technical University..I have two children and also loving parents.</p>
+  <!--// ENDS: ABOUT ME -->
+  <!-- STRENGTHS -->
  <h2>Strengths</h2>
  <ul>
    <li>Leadership</li>
    <li>Enthusiasm</li>
    <li>Creativity</li>
  </ul>
+  <!--// ENDS: STRENGTHS -->
+  <!-- EXPERIENCE -->
  <h2>Experience</h2>
  <ol>
    <li>Java</li>
    <li>Python</li>
    <li>Javascript</li>
  </ol>
+  <!--// ENDS: EXPERIENCE -->
  <p>I swim every day</p>
  <div>My portfolio: http://iserova.com/</div>
 
