--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -15,10 +15,10 @@
   </script>
 </head>
 <body>
-  
+  <section class="main">
   <!-- ABOUT ME -->
   <h1>Kitty Meow</h1>
-  <p><img alt="Kitty Meow Profile Picture" width="300" src="img/cat.jpg"/></p>
+  
   <p>Hello,
     <small>odio aenean</small>
     sed <strong>adipiscing</strong> diam donec adipiscing. Ultricies tristique nulla aliquet enim tortor at auctor. Sociis
@@ -44,7 +44,11 @@
     <li>Elementum pulvinar</li>
   </ol>
   <!--// ENDS: EXPERIENCE -->
-  
+  </section>
+  <aside class="sidebar">
+      <!-- IMAGE -->
+    <p><img alt="Kitty Meow Profile Picture" width="300" src="img/cat.jpg"/></p>
+     <!--// ENDS: IMAGE -->
   <!-- CONTACT -->
   <p>Arci porta non pulvinar <a href="#" target="_blank">neque</a> laoreet suspendisse interdum consectetur libero.
     Tristique risus nec feugiat in fermentum posuere urna. Molestie a iaculis at erat pellentesque adipiscing commodo elit
@@ -61,6 +65,7 @@
     scelerisque purus semper eget duis at tellus.
   </div>
   <!--// ENDS: SOCIAL MEDIA -->
+  </aside>
 
 </body>
 </html>
