--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -15,6 +15,7 @@
   </script>
 </head>
 <body>
+  <div class="wrapper">
   <section class="main">
   <!-- ABOUT ME -->
   <h1>Kitty Meow</h1>
@@ -66,6 +67,6 @@
   </div>
   <!--// ENDS: SOCIAL MEDIA -->
   </aside>
-
+</div>
 </body>
 </html>
