--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -7,9 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Challenge #2</title>
-  <style>
-    /* CSS */
-  </style>
+  <link rel="stylesheet" href="css/main.css">
+ 
   <script>
     // JAVASCRIPT
   </script>
