--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -16,6 +16,25 @@
 
   <!-- WRAPPER -->
   <div class="wrapper">
+    <h1>Table of Contents</h1>
+    <ol>
+      <li><a href="layout-1.html">Layout 1</a> </li>
+      <li><a href="layout-2.html">Layout 1</a> </li>
+      <li><a href="layout-3.html">Layout 1</a> </li>
+      <li><a href="layout-4.html">Layout 1</a> </li>
+      <li><a href="layout-5.html">Layout 1</a> </li>
+      <li><a href="layout-6.html">Layout 1</a> </li>
+      <li><a href="layout-7.html">Layout 1</a> </li>
+      <li><a href="layout-8.html">Layout 1</a> </li>
+      <li><a href="layout-9.html">Layout 1</a> </li>
+      <li><a href="layout-10.html">Layout 1</a> </li>
+      <li><a href="layout-11.html">Layout 1</a> </li>
+      <li><a href="layout-12.html">Layout 1</a> </li>
+      <li><a href="layout-13.html">Layout 1</a> </li>
+      <li><a href="layout-14.html">Layout 1</a> </li>
+      <li><a href="layout-15.html">Layout 1</a> </li>
+    </ol>
+    
   
   </div>
   <!--// ENDS: WRAPPER -->
