added styles and js

--- a/lesson-4/index.html
+++ b/lesson-4/index.html
@@ -7,14 +7,12 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Challenge #4</title>
-  <link href="css/main.css" rel="stylesheet">
-  <script>
-    // JAVASCRIPT
-  </script>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
   <div class="wrapper">
+    
     <section class="main">
       <!-- ABOUT ME -->
       <h1>Kitty Meow</h1>
@@ -24,6 +22,12 @@
         auctor. Sociis natoque penatibus et magnis dis parturient montes. Mollis nunc sed id semper risus in. Eget
         duis at tellus at urna condimentum mattis pellentesque.
       </p>
+     <button onclick="myText()">Click Me</button>
+     <div id="myDIV">
+        This is my Hide Content.
+    </div>
+    <button onclick="myAlert()" id="alert">Alert</button>
+    <button onclick="redColor()">Clicked</button>
       <!--// ENDS: ABOUT ME -->
   
       <!-- STRENGTHS -->
@@ -70,6 +74,8 @@
       <!--// ENDS: SOCIAL MEDIA -->
     </aside>
   </div>
+  <script src="js/main.js"></script>
+
 
 </body>
 </html>
